+Hipervinculo en tramos vacios habilitada

--- a/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
@@ -188,7 +188,7 @@
     _SectionIsEmpty = @(Model.Section.IsEmpty ? "true" : "false") ;
     _CustomerId = @(Model.Section.ClientesId is null ? 0 : Model.Section.ClientesId) ;
 
-    _CustomerId !== 0 && $('[for=Section_Espejo]').addClass('text-primary').prop('style', 'cursor: pointer;').attr('onclick', 'OpenMirrorURL();');
+    $('[for=Section_Espejo]').addClass('text-primary').prop('style', 'cursor: pointer;').attr('onclick', 'OpenMirrorURL();');
 
     if (!_SectionIsEmpty) {
         console.log('quwe', _CustomerId);
