--- a/KLS_WEB/KLS_WEB/Views/Travels/_Service.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Service.cshtml
@@ -17,7 +17,7 @@
                                 <i class="material-icons text-danger my-auto" style="cursor:pointer;" onclick="confirmDelete('@service', 0)">delete</i>
                                 <h5 class="my-auto">Terrestre Nacional</h5>
                             </div>
-                            <div class="col-8 d-flex justify-content-end">
+                            @*<div class="col-8 d-flex justify-content-end">
                                 <div class="d-flex justify-content-between">
 
                                     <div class="form-group row mr-3 my-auto">
@@ -34,7 +34,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
                         </div>
                     </form>
 
