--- a/KLS_WEB/KLS_WEB/Views/Travels/AddEdit.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/AddEdit.cshtml
@@ -41,11 +41,12 @@
 
 <div class="row pl-4 w-100">
     <div class="col-6">
-        <div class="d-flex justify-content-around">
-            <div class="my-auto">
+        <!--<div class="d-flex justify-content-around">
+            <div class="my-auto">-->
                 @*@{int id = Model.Travel.Id; }*@
-                <h4 class="text-secondary size-14" id="folio">@Model.Travel.Folio</h4>
+                <!--<h4 class="text-secondary size-14" id="folio">@Model.Travel.Folio</h4>
             </div>
+
             <div class="card text-center">
                 <div class="card-body pb-0 size-12">
                     @{ decimal costo = 0; }
@@ -95,7 +96,8 @@
                     <p class="text-light-grey">VACIOS</p>
                 </div>
             </div>
-        </div>
+
+        </div>-->
         <div class="card mt-3" style="height: 14.7rem;">
             <form asp-controller="Travels" asp-action="AddEditTravel" method="post">
                 <input asp-for="Travel.Id" type="hidden" />
@@ -106,15 +108,15 @@
                         <span asp-validation-for="Travel.TravelServiceId" class="text-danger"></span>
                     </div>
                     <div class="col-6 pt-3 pr-4">
-                        <label asp-for="Travel.Ejecutivo" class="form-label">EJECUTIVO</label>
-                        <input asp-for="Travel.Ejecutivo" type="text" class="form-control form-control-sm" placeholder="requerido">
-                    </div>
-                    <div class="col-6 pl-4 pt-3 pb-4">
                         <label asp-for="Travel.GrupoMonitor" class="form-label">GRUPO MONITOR</label>
                         <input asp-for="Travel.GrupoMonitor" type="text" class="form-control form-control-sm" placeholder="requerido">
                     </div>
+                    @*<div class="col-6 pl-4 pt-3 pb-4">
+                        <label asp-for="Travel.GrupoMonitor" class="form-label">GRUPO MONITOR</label>
+                        <input asp-for="Travel.GrupoMonitor" type="text" class="form-control form-control-sm" placeholder="requerido">
+                    </div>*@
                 </div>
-                <div class="pb-3 pl-2">
+                <div class="pb-3 pl-2 mt-3">
                     <button type="submit" id="guardar" class="btn btn-dark" style="width: 12.8rem;">@(Model.Travel.Id is 0 ? "GENERAR VIAJE" : "ACTUALIZAR VIAJE")</button>
                 </div>
             </form>
@@ -126,7 +128,7 @@
             <b class="my-auto size-12">ADMINISTRACIÓN DE TRAMOS</b>
             @if (Model.Travel.Id > 0)
             {
-                <button class="btn btn-dark cshadow" onclick="GetSection(this, 0)"><span class="material-icons">add</span></button>
+                <button id="addsection" class="btn btn-dark cshadow" onclick="GetSection(this, 0)"><span class="material-icons">add</span></button>
             }
         </div>
         <div style="height: 17rem; overflow-y: scroll; overflow-x: unset;">
@@ -134,10 +136,11 @@
                 <thead>
                     <tr>
                         <th>TRAMO</th>
-                        <th>COSTO</th>
-                        <th>VENTA</th>
+                        @*<th>COSTO</th>
+                        <th>VENTA</th>*@
                         <th>CLIENTE</th>
                         <th>ESTATUS</th>
+                        <th>CLONAR</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -147,10 +150,11 @@
                         {
                             <tr>
                                 <td><a href="javascript:void(0)" onclick="GetSection(this, @tramo.Id)">@tramo.Folio</a></td>
-                                <td>@(tramo.Services.Any() ? tramo.Services.Sum(x => x.Costo).ToString("C") : 0.ToString("C"))</td>
-                                <td>@(tramo.Services.Any() ? tramo.Services.Sum(x => x.Precio).ToString("C") : 0.ToString("C"))</td>
+                                @*<td>@(tramo.Services.Any() ? tramo.Services.Sum(x => x.Costo).ToString("C") : 0.ToString("C"))</td>
+                                <td>@(tramo.Services.Any() ? tramo.Services.Sum(x => x.Precio).ToString("C") : 0.ToString("C"))</td>*@
                                 <td>@(tramo.IsEmpty ? "-" : tramo.Clients.NombreCorto)</td>
                                 <td id="estatus-@tramo.Id" class="text-primary font-weight-bold">@tramo.Substatus.Status.Name-@tramo.Substatus.Name</td>
+                                <td><a asp-controller="Travels" asp-action="CloneSection" asp-route-SectionId="@tramo.Id">CLONAR TRAMO</a></td>
                             </tr>
                         }
                     }
@@ -476,7 +480,7 @@
         const GetSection = async (b, SectionId) => {
             $('.sk-cube-grid').show();
             $('#sectioncontainer, #addservicescontainer, #traveldetails-container, #panelcontainer').hide();
-            b && (b.disabled = true);
+            b ? (b.disabled = true) : $('#addsection').prop('disabled', true);
             SectionId === 0 && ($('#servicescontainer').empty(), $('.addServicios').show());
             $('#traveldetails-container').attr('rel', SectionId);
             try {
@@ -491,7 +495,7 @@
             } catch (e) {
                 console.error(e);
             }
-            b && (b.disabled = false);
+            b ? (b.disabled = false) : $('#addsection').prop('disabled', false);
         }
 
         const GetCustomerOD = async CustomerId => {
@@ -723,7 +727,7 @@
                 const response = await fetch(`/Travels/GetDrivers?CarrierId=${idtransportista}`);
                 const data = await response.json();
                 $(`#chofer-${service}`).empty();
-                $(`#chofer-${service}`).append(`<option value="0" selected>SELECCIONA UN CHOFER</option>`)
+                //$(`#chofer-${service}`).append(`<option value="0" selected>SELECCIONA UN CHOFER</option>`)
                 data.length > 0 ? data.map(({ id, nombre, estatus }) => estatus === 1 ? $(`#chofer-${service}`).append(`<option value="${id}">${nombre}</option>`) : null) : $(`#chofer-${service}`).append(`<option value="0">SIN OPERADORES ACTIVOS</option>`);
                 dSelect(`chofer-${service}`);
             } catch (e) {
@@ -927,7 +931,8 @@
 
         const GetRoutePrice = async RouteId => {
             const response = await fetch(`/Travels/GetRoutePrice?RouteId=${RouteId}`);
-            const { precioMinimo, precioMaximo } = await response.json();
+            const { precioMinimo, precioMaximo, url } = await response.json();
+            url ? $('#routeURL').html(url).attr({ 'href': url, 'target': '_blank' }) : $('#routeURL').html('SIN URL CONFIGURADA').attr({ 'href': 'javascript:void(0)', 'target': '' });
             precioMinimo && precioMaximo && $('.priceinfo-terrestrenacional').text(`${new Intl.NumberFormat('es-MX', { style: 'currency', currency: 'MXN' }).format(parseFloat(precioMinimo))} - ${new Intl.NumberFormat('es-MX', { style: 'currency', currency: 'MXN' }).format(parseFloat(precioMaximo))}`);
         }
 
